<resources>
    <string name="app_name">FinalProject</string>
    <string name="you_wake_up_with_a_headache_and_no_recollection_of_who_you_are_what_you_do_or_where_you_are">You wake up with a headache and no recollection of who you are, what you do, or where you are.</string>
    <string name="you_ask_someone_where_you_are_and_they_respond_with_quot_you_re_in_the_union_quot">You ask someone where you are, and they respond with \"you\'re in the Union.\"</string>
    <string name="your_action_words_are">Your action words are:</string>
    <string name="go">GO</string>
    <string name="quit">QUIT</string>
    <string name="help">HELP</string>
    <string name="south">SOUTH</string>
    <string name="east">EAST</string>
    <string name="west">WEST</string>
    <string name="north">NORTH</string>
    <string name="questions">QUESTIONS</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="option_d">OPTION D</string>
    <string name="d">D</string>
    <string name="option_c">OPTION C</string>
    <string name="option_b">OPTION B</string>
    <string name="option_a">OPTION A</string>
    <string name="start_game">Start Game</string>
    <string name="inventory">inventory</string>
    <string name="todo">TODO</string>
    <string name="back_to_game">Back to game</string>
    <string name="description">description</string>
    <string name="life">TextView</string>
    <string name="your_life_count_is">Your life count is</string>
    <string name="your_life_count">Your life count is</string>
    <string name="item">ITEM</string>
    <string name="you_recently_forgot_to_do_mp_71">You recently forgot to do MP 71.</string>
    <string name="your_grade_has_dropped_to_an_f">Your grade has dropped to an F.</string>
    <string name="for_every_incorrect_answer_you_lose_a_life_keep_it_above_0_or_you_lose">For every incorrect answer, you lose a life. Keep it above 0 or you lose!</string>
    <string name="task_visit_all_the_locations_by_answering_trivia_questions">Task: Visit all the locations by answering trivia questions.</string>
    <string name="once_you_have_visited_all_the_rooms_make_your_way_to_siebel_and_you_win">Once you have visited all the rooms, make your way to Siebel and you win.</string>
    <string name="riddle_challen_ger">Riddle \'CHALLEN\'ger</string>
    <string name="challen_ging_riddles">\'CHALLEN\'ging Riddles</string>
</resources>
