<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:background="@drawable/bg_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/you_recently_forgot_to_do_mp_71"
        android:visibility="visible"
        android:textColor="@color/maroon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inst2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:bufferType="normal"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/your_grade_has_dropped_to_an_f"
        android:textColorLink="#C20013"
        android:textSize="18sp"
        android:visibility="visible"
        android:textColor="@color/maroon"
        app:layout_constraintStart_toStartOf="@+id/instruction1"
        app:layout_constraintTop_toBottomOf="@+id/instruction1" />

    <TextView
        android:id="@+id/inst3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/maroon"
        android:text="@string/task_visit_all_the_locations_by_answering_trivia_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inst2" />

    <TextView
        android:id="@+id/inst4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/for_every_incorrect_answer_you_lose_a_life_keep_it_above_0_or_you_lose"
        android:textColor="@color/maroon"
        app:layout_constraintStart_toStartOf="@id/inst3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inst5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/once_you_have_visited_all_the_rooms_make_your_way_to_siebel_and_you_win"
        android:textColor="@color/maroon"
        app:layout_constraintStart_toStartOf="@id/inst4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="529dp"
        android:text="@string/go"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inst2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/quitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="529dp"
        android:text="@string/quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/go"
        app:layout_constraintTop_toBottomOf="@+id/inst2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>